@@ -1,8 +1,5 @@
-Nulgrind, the minimal Valgrind tool
-
 (action at startup) vgdb me ... 
 
 
 starting ...
 aborting ...
-
